# stm32-rust-test

./: Cargo.toml  Embed.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: adc.rs  bemf.rs  current_sense.rs  drive.rs  gpio.rs  log.rs  main.rs  opamp.rs  regs.rs  safety.rs  sine.rs  sixstep.rs  tim1.rs
